feat: add hover styles & variables

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,7 @@
   <body class="page__body">
     <!-- #region header -->
     <header class="header page__header">
-      <div class="header__background"></div>
-      <div class="container">
+      <div class="container header__container">
         <div class="header__content">
           <div class="header__top">
             <a
@@ -58,13 +57,13 @@
           <div class="header__bottom">
             <h1 class="header__title">художній музей</h1>
             <a
-              href="#menu"
+              href="#events"
               class="header__button"
             >
               <span class="header__button-text">квитки</span>
             </a>
             <a
-              href="#"
+              href="#events"
               class="header__events"
             >
               <span class="header__events-line"></span>
@@ -73,6 +72,7 @@
           </div>
         </div>
       </div>
+      <div class="header__background"></div>
     </header>
     <!-- #endregion -->
     <!-- #region aside-->
@@ -100,7 +100,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="#actual-events"
+                    href="#events"
                     class="nav__link"
                   >
                     Виставки та події
@@ -118,7 +118,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="#footer"
+                    href="#contacts"
                     class="nav__link"
                   >
                     Контакти
@@ -399,7 +399,7 @@
       <!-- #endregion -->
     </main>
     <!-- #endregion -->
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container footer__container">
         <div class="footer__top">
           <div class="footer__icons">
@@ -412,12 +412,14 @@
             </a>
             <div class="footer__contact-icons">
               <a
-                href="#"
+                href="https://www.facebook.com/namu.museum/"
                 class="icon icon--facebook"
+                target="_blank"
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/namu.museum/"
                 class="icon icon--instagram"
+                target="_blank"
               ></a>
             </div>
           </div>
@@ -455,7 +457,7 @@
             <p class="contacts__text">
               вул.
               <a
-                href="#"
+                href="https://g.co/kgs/xzU11si"
                 class="contacts__link"
                 target="_blank"
               >
