feat: add menu background

--- a/src/index.html
+++ b/src/index.html
@@ -80,86 +80,88 @@
       class="page__menu menu"
       id="menu"
     >
-      <div class="container">
-        <div class="menu__content">
-          <!-- #region aside top -->
-          <div class="menu__top">
-            <a
-              href="#"
-              class="icon icon--close"
-            ></a>
-            <nav class="nav menu__nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a
-                    href="#gallery"
-                    class="nav__link"
-                  >
-                    Галерея
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a
-                    href="#events"
-                    class="nav__link"
-                  >
-                    Виставки та події
-                  </a>
-                </li>
-              </ul>
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a
-                    href="#subscription"
-                    class="nav__link"
-                  >
-                    Про Нас
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a
-                    href="#contacts"
-                    class="nav__link"
-                  >
-                    Контакти
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!-- #endregion -->
-          <div class="menu__underline"></div>
-          <!-- #region aside bottom -->
-          <div class="menu__bottom">
-            <div class="schedule">
-              <div class="schedule__table">
-                <p class="schedule__title">Графік роботи</p>
-                <p class="schedule__rows">
-                  <span class="schedule__bold">12:00 — 20:00</span>
-                  середа
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__content">
+            <!-- #region aside top -->
+            <div class="menu__top">
+              <a
+                href="#"
+                class="icon icon--close"
+              ></a>
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      href="#gallery"
+                      class="nav__link"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      href="#events"
+                      class="nav__link"
+                    >
+                      Виставки та події
+                    </a>
+                  </li>
+                </ul>
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      href="#subscription"
+                      class="nav__link"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      href="#contacts"
+                      class="nav__link"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <!-- #endregion -->
+            <div class="menu__underline"></div>
+            <!-- #region aside bottom -->
+            <div class="menu__bottom">
+              <div class="schedule">
+                <div class="schedule__table">
+                  <p class="schedule__title">Графік роботи</p>
+                  <p class="schedule__rows">
+                    <span class="schedule__bold">12:00 — 20:00</span>
+                    середа
+                    <br />
+                    <span class="schedule__bold">12:00 — 20:00</span>
+                    четвер
+                    <br />
+                    <span class="schedule__bold">12:00 — 20:00</span>
+                    п’ятниця
+                    <br />
+                    <span class="schedule__bold">11:00 — 19:00</span>
+                    субота
+                    <br />
+                    <span class="schedule__bold">11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </div>
+                <p class="schedule__notes">
+                  <span class="schedule__bold">Вихідні:</span>
+                  понеділок, вівторок
                   <br />
-                  <span class="schedule__bold">12:00 — 20:00</span>
-                  четвер
-                  <br />
-                  <span class="schedule__bold">12:00 — 20:00</span>
-                  п’ятниця
-                  <br />
-                  <span class="schedule__bold">11:00 — 19:00</span>
-                  субота
-                  <br />
-                  <span class="schedule__bold">11:00 — 19:00</span>
-                  неділя
+                  Каса припиняє роботу за 1 годину до закриття музею
                 </p>
               </div>
-              <p class="schedule__notes">
-                <span class="schedule__bold">Вихідні:</span>
-                понеділок, вівторок
-                <br />
-                Каса припиняє роботу за 1 годину до закриття музею
-              </p>
             </div>
+            <!-- #endregion -->
           </div>
-          <!-- #endregion -->
         </div>
       </div>
     </aside>
