feat: add footer arrow up

--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,10 @@
       <!-- #endregion -->
     </main>
     <!-- #endregion -->
-    <footer class="footer" id="contacts">
+    <footer
+      class="footer"
+      id="contacts"
+    >
       <div class="container footer__container">
         <div class="footer__top">
           <div class="footer__icons">
@@ -491,6 +494,10 @@
               </a>
             </p>
           </div>
+          <a
+            href="#"
+            class="footer__arrow-up"
+          ></a>
           <div class="footer__line"></div>
           <ul class="footer-nav footer__nav footer__nav--1">
             <li>
