corrected the mentor's remark

--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
 
       <section
         id="exhibition"
-        class="event event--exhibition"
+        class="event exhibition"
       >
         <div class="event__wrapper go-and-come-back">
           <div class="event__img-box">
@@ -189,14 +189,14 @@
           </div>
           <div class="event__content">
             <div class="event__header">
-              <h2 class="event__title">ВИСТАВКА</h2>
-              <p class="event__dates">26.08-29.11.2019</p>
+              <h2 class="event__title exhibition__title">ВИСТАВКА</h2>
+              <p class="event__dates exhibition__dates" >26.08-29.11.2019</p>
             </div>
-            <h3 class="event__name">
+            <h3 class="event__name exhibition__name">
               Йду і повертаюсь
               <span></span>
             </h3>
-            <p class="event__description">
+            <p class="event__description exhibition__description">
               Національний Художній Музей України презентує унікальну частину
               колекції Градобанку - українське мистецтво другої половини
               1980-1995 років.
@@ -232,7 +232,7 @@
 
       <section
         id="from-classicism-to-romanticism"
-        class="event from-classicism-to-romanticism"
+        class="from-classicism-to-romanticism"
       >
         <div class="event__img-box">
           <img
