--- a/src/index.html
+++ b/src/index.html
@@ -29,99 +29,155 @@
   <body>
     <header class="header">
       <div class="header__content">
-
-        <a href="#dropdown-menu"
-         class="header__menu-icon"
-         id="menu-toggle"
-         aria-label="Open menu">
-          <img src="./images/icons/burger-menu-icon.svg"
-          alt="menu icon" />
+        <a
+          href="#dropdown__menu"
+          class="header__menu-icon"
+          id="menu-toggle"
+          aria-label="Open menu"
+        >
+          <img
+            src="./images/icons/burger-menu-icon.svg"
+            alt="menu icon"
+          />
         </a>
-
-
-        <h2 class="header__logo">NA <br />MU</h2>
-
-
         <div class="header__img">
+          <span class="header__logo">
+            NA
+            <br />
+            MU
+          </span>
         </div>
 
-        <!-- Header Text -->
-        <div class="header__text">
-          <h1 class="header__text-title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
-
-          <div class="header__cta-button">
-            <a href="#tickets" class="header__cta-button__link">
-              <span class="header__cta-button__text">КВИТКИ</span>
+        <div
+          class="intro"
+          id="about-us"
+        >
+          <h1 class="intro__title">
+            ХУДОЖНІЙ
+            <br />
+            МУЗЕЙ
+          </h1>
+          <div class="intro__cta-button">
+            <a
+              href="#tickets"
+              class="intro__cta-button"
+            >
+              <span class="intro__cta-button__text">КВИТКИ</span>
               <img
                 src="./images/icons/icon-arrow.png"
-                alt="Arrow"
-                class="header__cta-button__icon"
+                alt="icon-arrow"
+                class="intro__cta-button__icon"
               />
             </a>
           </div>
-
-
-          <div class="header__footnote-section">
-            <p class="header__footnote-name"> ПОДІЇ </p>
-            <div class="header__footnote-line"></div>
+          <div class="intro__footnote">
+            <p class="intro__footnote-name">ПОДІЇ</p>
+            <div class="intro__footnote-line"></div>
           </div>
         </div>
       </div>
-      </div>
-      </div>
-
 
       <!-- Dropdown Menu -->
-      <aside class="header__menu"
-      id="dropdown-menu" aria-hidden="true">
+      <aside
+        class="header__menu"
+        id="dropdown__menu"
+        aria-hidden="true"
+      >
         <div class="header__menu-wrapper">
-
-
-          <a href="#"
-          class="header__menu-icon-close"
-          id="dropdown-menu-toggle"
-          aria-label="Close menu">
-
-            <img src="./images/icons/icon-close.svg"
-            alt="Close menu icon" />
+          <a
+            href="#"
+            class="header__menu-icon-close"
+            aria-label="Close menu"
+          >
+            <img
+              src="./images/icons/icon-close.svg"
+              alt="Close menu icon"
+            />
           </a>
 
-
-
-          <nav class="nav">
-            <div class="nav__columns">
-              <a href="#gallery" class="menu__link">Галерея</a>
-              <a href="#events" class="menu__link">Виставки та події</a>
-              <a href="#about-us" class="menu__link">Про Нас</a>
-              <a href="#contacts" class="menu__link">Контакти</a>
-            </div>
+          <nav class="header__menu-nav">
+            <ul class="header__menu-nav-item">
+              <li>
+                <a
+                  href="#gallery"
+                  class="header__menu-link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#events"
+                  class="header__menu-link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="header__menu-nav-item">
+              <li>
+                <a
+                  href="#about-us"
+                  class="header__menu-link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#contacts"
+                  class="header__menu-link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
           </nav>
+        </div>
 
-          <hr class="menu__separator" />
+        <hr class="header__menu-separator" />
 
-          <div class="menu__info">
-            <p class="menu__title">Графік роботи</p>
-            <p class="menu__text">
-              <strong>12:00 – 20:00</strong> середа<br />
-              <strong>12:00 – 20:00</strong> четвер<br />
-              <strong>12:00 – 20:00</strong> п’ятниця<br />
-              <strong>11:00 – 19:00</strong> субота<br />
-              <strong>11:00 – 19:00</strong> неділя
+        <div class="header__menu-hours">
+          <div class="header__menu-hours-schedule">
+            <h3 class="header__menu-hours-schedule-title">Графік роботи</h3>
+            <p>
+              <strong>12:00 - 20:00</strong>
+              середа
             </p>
-            <p class="menu__note">
-              Вихідні: понеділок, вівторок<br />
-              Каса припиняє роботу за 1 годину до закриття музею
+            <p>
+              <strong>12:00 - 20:00</strong>
+              четвер
             </p>
+            <p>
+              <strong>12:00 - 20:00</strong>
+              п’ятниця
+            </p>
+            <p>
+              <strong>11:00 - 19:00</strong>
+              субота
+            </p>
+            <p>
+              <strong>11:00 - 19:00</strong>
+              неділя
+            </p>
+          </div>
+          <div class="header__menu-hours-closing-note">
+            <p>
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+            </p>
+            <p>Kaca припиняє роботу за 1 годину до закриття музею</p>
           </div>
         </div>
       </aside>
     </header>
 
-
     <main>
       <div class="main__content">
-
-        <section class="events">
+        <section
+          class="events"
+          id="events"
+        >
           <h2 class="events__section-title">Актуальні події</h2>
           <div class="events__grid">
             <!-- Event 1 -->
@@ -129,7 +185,7 @@
               <img
                 class="events__image"
                 src="./images/events-1.svg"
-               alt="gallery-art-img"
+                alt="gallery-art-img"
               />
               <div class="events__details">
                 <div class="events__meta">
@@ -138,8 +194,9 @@
                 </div>
                 <h3 class="events__name">Йду і повертаюсь</h3>
                 <p class="events__description">
-                  Національний Художній Музей України презентує унікальну частину
-                  колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
                 </p>
               </div>
             </div>
@@ -160,14 +217,13 @@
                 </div>
                 <h3 class="events__name">І спогади і мрії</h3>
                 <p class="events__description">
-                  Національний художній музей України до 100 річчя від дня народження
-                  видатної української художниці Тетяни Яблонської відкриває ретроспективну
-                  ювілейну виставку «І спогади і мрії».
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </p>
               </div>
             </div>
           </div>
-
         </section>
       </div>
     </main>
@@ -177,7 +233,6 @@
       src="./images/classicism.svg"
       alt="gallery-art-img"
     />
-
 
     <!--classicism block -->
     <section class="class">
@@ -193,7 +248,10 @@
     <main>
       <div class="main__content"></div>
       <!-- Gallery block -->
-      <section class="gallery">
+      <section
+        class="gallery"
+        id="gallery"
+      >
         <h2 class="gallery__section-title">Галерея</h2>
         <div class="gallery__slider">
           <img
@@ -202,28 +260,26 @@
             class="gallery__image"
           />
 
-
           <img
             src="images/gallery-2.svg"
             alt="Gallery art"
-            class="gallery__image gallery__image--tablet"
+            class="gallery__image--tablet"
           />
-         
 
           <img
             src="images/gallery-art-2.svg"
             alt="Gallery art"
-            class="gallery__image gallery__image--wide"
+            class="gallery__image--wide--big"
           />
           <img
             src="images/gallery-art-3.svg"
             alt="Gallery art"
-            class="gallery__image gallery__image--wide"
+            class="gallery__image--wide"
           />
           <img
             src="images/gallery-art-4.svg"
             alt="Gallery art"
-            class="gallery__image gallery__image--normal"
+            class="gallery__image--normal"
           />
         </div>
 
@@ -233,58 +289,196 @@
           <span class="gallery__dot"></span>
           <span class="gallery__dot"></span>
         </div>
-      </div>
       </section>
+    </main>
 
-      <!-- Subscribe block -->
-      <section class="subscribe">
-        <h2 class="subscribe__title">Підпишіться на новини</h2>
-        <form class="subscribe__form">
+    <!-- Subscribe block -->
+    <section class="subscription">
+      <div class="subscription__wrapper">
+        <h2 class="subscription__title-name">Підписка</h2>
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form class="subscription__form">
           <input
             type="email"
-            class="subscribe__input"
-            placeholder="Введіть ваш email"
+            placeholder="E-mail"
+            class="subscription__input"
           />
           <button
             type="submit"
-            class="subscribe__button"
+            class="subscription__button"
           >
-            Підписатись
+            <img
+              class="subscription__icon"
+              src="./images/icons/keyboard_arrow.png"
+              alt="Close menu icon"
+            />
           </button>
         </form>
-      </section>
+      </div>
+    </section>
 
-      <!--Contacts block-->
-
-    </main>
-    <!-- Footer -->
+    <!-- Footer block -->
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__hours">
-          <h4>Графік роботи</h4>
-          <ul>
-            <li>12:00 — 20:00 середа</li>
-            <li>12:00 — 20:00 четвер</li>
-            <li>12:00 — 20:00 п'ятниця</li>
-            <li>11:00 — 19:00 субота</li>
-            <li>11:00 — 19:00 неділя</li>
-          </ul>
-          <p>Вихідні: понеділок, вівторок</p>
-          <p>Kaca припиняє роботу за 1 годину до закриття музею</p>
+        <!-- Branding Section: Logo & Socials -->
+        <div class="footer__branding">
+          <span class="footer__logo">
+            NA
+            <br />
+            MU
+          </span>
+          <div class="footer__socials">
+            <a
+              href="#"
+              class="footer__social-link"
+              aria-label="Facebook"
+            >
+              <img
+                src="./images/icons/facebook-icon.png"
+                alt="Facebook"
+              />
+            </a>
+            <a
+              href="#"
+              class="footer__social-link"
+              aria-label="Instagram"
+            >
+              <img
+                src="./images/icons/instagram-icon.png"
+                alt="Instagram"
+              />
+            </a>
+          </div>
         </div>
-        <nav  class="footer__nav">
-          <ul class="footer__links">
-            <li><a href="#gallery">Галерея</a></li>
-            <li><a href="#events">Виставки та події</a></li>
-            <li><a href="#about-us">Про Hac</a></li>
-            <li><a href="#contacts">Контакти</a></li>
-          </ul>
-        </nav>
-        <div class="footer__copyright">
-          <p class="footer__text--left">Copyright © 2019. All Rights Reserved.</p>
-          <p class="footer__text--right">Designed by Zhyriada Marina</p>
+
+        <!-- Contact Details and Address -->
+        <div class="footer__content">
+          <div class="footer__details">
+            <!-- Working Hours Section -->
+            <div class="footer__working-hours">
+              <p class="footer__title">Графік роботи:</p>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <strong>11:00 - 20:00</strong>
+                  середа
+                </li>
+                <li class="footer__item">
+                  <strong>12:00 - 20:00</strong>
+                  четвер
+                </li>
+                <li class="footer__item">
+                  <strong>12:00 - 20:00</strong>
+                  п’ятниця
+                </li>
+                <li class="footer__item">
+                  <strong>11:00 - 19:00</strong>
+                  субота
+                </li>
+                <li class="footer__item">
+                  <strong>11:00 - 19:00</strong>
+                  неділя
+                </li>
+              </ul>
+
+              <div class="footer__notes">
+                <p class="footer__text">
+                  <strong>Вихідні:</strong>
+                  понеділок, вівторок
+                </p>
+                <p class="footer__note">
+                  Kaca припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+
+            <!-- Contact Info Section -->
+            <div
+              class="footer__contact-info"
+              id="contacts"
+            >
+              <p class="footer__title">Контакти:</p>
+              <p class="footer__address">
+                <a
+                  href="https://www.google.com/maps?q=вул.+M.+Грушевського,+6,+Київ,+01001"
+                  class="footer__link"
+                  target="_blank"
+                >
+                  вул. M. Грушевського, 6, Київ, 01001
+                </a>
+              </p>
+              <p class="footer__address">
+                тел.:
+                <a
+                  href="tel:+380442781357"
+                  class="footer__link"
+                >
+                  +38 (044) 278-13-57
+                </a>
+              </p>
+              <p class="footer__address">
+                факс:
+                <a
+                  href="tel:+380442781434"
+                  class="footer__link"
+                >
+                  +38 (044) 278-14-34
+                </a>
+              </p>
+              <p class="footer__address">
+                e-mail:
+                <a
+                  href="mailto:info@namu.kiev.ua?subject=Inquiry from Website"
+                  class="footer__link"
+                >
+                  info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
         </div>
-        </nav>
+
+        <hr class="separator" />
+        <!-- Footer Navigation -->
+        <div class="footer__content">
+          <nav class="footer__nav">
+            <div class="footer__nav-links">
+              <a
+                href="#gallery"
+                class="footer__link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#events"
+                class="footer__link"
+              >
+                Виставки та події
+              </a>
+            </div>
+            <div class="footer__nav-links">
+              <a
+                href="#about-us"
+                class="footer__link"
+              >
+                Про Hac
+              </a>
+              <a
+                href="#contacts"
+                class="footer__link"
+              >
+                Контакти
+              </a>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+      <!-- Footer Copyright -->
+      <div class="footer__copyright">
+        <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__text">Designed by Zhyriada Marina</p>
       </div>
     </footer>
   </body>
