add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js">
     </script>
     <script
-      src="scripts/main.js"> defer
+      src="scripts/main.js" defer>
     </script>
   </head>
   <!-- #endregion -->
@@ -96,6 +96,8 @@
         </div>
       </div>
     </aside>
+
+    <div class="page__overlay"></div>
 
     <main class="main">
       <section class="events" id="exhibition">
