--- a/src/index.html
+++ b/src/index.html
@@ -55,30 +55,44 @@
       <div class="container">
         <div class="header__content">
           <div class="top-bar header__top-bar">
-            <a href="#menu" class="icon icon--menu"></a>
-            <a href="#" class="top-bar__photo-link">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+            <a
+              href="#"
+              class="top-bar__photo-link"
+            >
               <img
                 src="/src/images/header-logo.svg"
                 alt="NAMU logo"
-                class="icon icon--header-logo"/>
+                class="icon icon--header-logo"
+              />
             </a>
           </div>
           <h1 class="header__title title">Художній музей</h1>
 
-          <a class="header__button" href="#events">
-            <div class="header__tickets">
-              Квитки
-            </div>
+          <a
+            class="header__button"
+            href="#events"
+          >
+            <div class="header__tickets">Квитки</div>
             <div class="header__arrow">
-              <img src="/src/images/icon-arrow.svg" alt="arrow icon"
-              class="icon icon--arrow">
+              <img
+                src="/src/images/icon-arrow.svg"
+                alt="Arrow icon"
+                class="icon icon--arrow"
+              />
             </div>
           </a>
 
-          <div class="header__events">
+          <a
+            class="header__events"
+            href="#events"
+          >
             <div class="header__events-line"></div>
             <p>ПОДІЇ</p>
-          </div>
+          </a>
         </div>
       </div>
     </header>
@@ -90,44 +104,48 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__top">
-            <a href="#" class="icon icon--close"></a>
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
             <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
                   <a
-                      href="#galery"
-                      class="nav__link"
-                    >
-                      Галерея
+                    href="#galery"
+                    class="nav__link"
+                  >
+                    Галерея
                   </a>
                 </li>
                 <li class="nav__item">
                   <a
-                      href="#form"
-                      class="nav__link"
-                    >
-                      Про Нас
+                    href="#form"
+                    class="nav__link"
+                  >
+                    Про Нас
                   </a>
                 </li>
                 <li class="nav__item">
                   <a
-                      href="#events"
-                      class="nav__link"
-                    >
-                      Виставки та події
+                    href="#events"
+                    class="nav__link"
+                  >
+                    Виставки та події
                   </a>
                 </li>
                 <li class="nav__item nav__item--contacts-aside">
                   <a
-                      href="#contacts"
-                      class="nav__link"
-                    >
-                      Контакти
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
                   </a>
                 </li>
               </ul>
             </nav>
           </div>
+
           <div class="schedule">
             <p class="schedule__title">Графік роботи</p>
             <div class="schedule__content">
@@ -167,16 +185,20 @@
 
     <main class="main page__main">
       <div class="main__content">
-
-        <section class="events" id="events">
+        <section
+          class="events"
+          id="events"
+        >
           <h2 class="events__title title title--section">Актуальні події</h2>
 
           <div class="events__articles">
             <div class="container">
               <article class="article">
-                <img src="/src/images/article-1photo.png"
-                     alt="The painting"
-                     class="article__photo"/>
+                <img
+                  src="/src/images/landscape.png"
+                  alt="The landscape to the sea"
+                  class="article__photo"
+                />
 
                 <div class="article__info">
                   <div class="article__details">
@@ -184,12 +206,12 @@
                     <p class="article__time">26.08-29.11.2019</p>
                   </div>
                   <h3 class="article__title article__title--red-icon">
-                      Йду і повертаюсь
+                    Йду і повертаюсь
                   </h3>
                   <p class="article__description">
-                      Національний Художній Музей України презентує унікальну
-                      частину колекції Градобанку - українське мистецтво другої
-                      половини 1980-1995 років.
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
                   </p>
                 </div>
               </article>
@@ -198,22 +220,23 @@
             <div class="container">
               <article class="article">
                 <img
-                    src="/src/images/article-2photo.png"
-                    alt="The painting"
-                    class="article__photo"
-                  />
+                  src="/src/images/woman-and-peacock.png"
+                  alt="The woman with a peacock"
+                  class="article__photo"
+                />
                 <div class="article__info">
                   <div class="article__details">
                     <p class="article__type">ВИСТАВКА</p>
                     <p class="article__time">26.08-29.11.2019</p>
                   </div>
                   <h3 class="article__title article__title--red-icon">
-                      І спогади і мрії
+                    І спогади і мрії
                   </h3>
                   <p class="article__description">
-                      Національний художній музей України до 100 річчя від дня
-                      народження видатної української художниці Тетяни Яблонської
-                      відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
                   </p>
                 </div>
               </article>
@@ -226,13 +249,12 @@
                   <p class="article__time">26/08/2019 - 11:00</p>
                 </div>
                 <h3 class="article__title article__title--box">
-                      Від класицизму до романтизму
+                  Від класицизму до романтизму
                 </h3>
               </div>
             </article>
           </div>
         </section>
-
 
         <section
           class="galery"
@@ -244,28 +266,32 @@
             <div class="swiper-wrapper swiper__wrapper swiper__wrapper--mobile">
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-1photo.png"
-                  alt="The painting"
+                  src="/src/images/ukrainian-woman.png"
+                  alt="Ukrainian woman"
                   class="swiper-image swipper__image swiper__image--mobile"
                 />
               </div>
+
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-2photo.png"
-                  alt="The painting"
+                  src="/src/images/geese.png"
+                  alt="Geese"
                   class="swiper-image swipper__image swiper__image--mobile"
                 />
               </div>
+
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-3photo.png"
-                  alt="The painting"
+                  src="/src/images/village-in-winter.png"
+                  alt="Village in winter"
                   class="swiper-image swipper__image swiper__image--mobile swiper__image--positioned-left"
                 />
               </div>
             </div>
             <div class="swiper-pagination swiper__pagination">
-              <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
+              <span
+                class="swiper-pagination-bullet swiper-pagination-bullet-active"
+              ></span>
               <span class="swiper-pagination-bullet"></span>
               <span class="swiper-pagination-bullet"></span>
             </div>
@@ -275,28 +301,30 @@
             <div class="swiper-wrapper swiper__wrapper swiper__wrapper--tablet">
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-1photo.png"
-                  alt="The painting"
+                  src="/src/images/ukrainian-woman.png"
+                  alt="Ukrainian woman"
                   class="swiper-image swiper__image swiper__image--tablet"
                 />
               </div>
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-2photo.png"
-                  alt="The painting"
+                  src="/src/images/geese.png"
+                  alt="Geese"
                   class="swiper-image swiper__image swiper__image--tablet"
                 />
               </div>
               <div class="swiper-slide swiper__slide">
                 <img
-                  src="/src/images/swiper-3photo.png"
-                  alt="The painting"
+                  src="/src/images/village-in-winter.png"
+                  alt="Village in winter"
                   class="swiper-image swiper__image swiper__image--tablet swiper__image--last"
                 />
               </div>
             </div>
             <div class="swiper-pagination swiper__pagination">
-              <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
+              <span
+                class="swiper-pagination-bullet swiper-pagination-bullet-active"
+              ></span>
               <span class="swiper-pagination-bullet"></span>
             </div>
           </div>
@@ -305,23 +333,23 @@
 
           <div class="galery__images">
             <img
-              src="/src/images/swiper-1photo.png"
-              alt="The painting"
+              src="/src/images/ukrainian-woman.png"
+              alt="Ukrainian woman"
               class="galery__photo galery__photo--woman"
             />
             <img
-              src="/src/images/galery-village-photo.png"
-              alt="The painting"
-              class="galery__photo  galery__photo--vilage"
+              src="/src/images/village-in-winter.png"
+              alt="Village in winter"
+              class="galery__photo galery__photo--vilage"
             />
             <img
-              src="/src/images/article2-photo3.png"
-              alt="The painting"
+              src="/src/images/girl-sitting-in-park.png"
+              alt="The girl sitting in the park"
               class="galery__photo galery__photo--park"
             />
             <img
-              src="/src/images/article2-4photo.png"
-              alt="The painting"
+              src="/src/images/sunset-over-sea.png"
+              alt="The sunset over the sea"
               class="galery__photo galery__photo--sea"
             />
           </div>
@@ -355,7 +383,7 @@
                   type="submit"
                 >
                   <img
-                    src="/src/images/icon-arrow.png"
+                    src="/src/images/icon-arrow.svg"
                     alt="Arrow icon"
                     class="icon icon--right-arrow"
                   />
@@ -401,70 +429,71 @@
             <div class="schedule__content schedule__content--footer">
               <ul class="schedule__list">
                 <li class="schedule__list-item schedule__list-item--footer">
-                    12:00 — 20:00
+                  12:00 — 20:00
                   <span class="schedule__list-day">середа</span>
                 </li>
                 <li class="schedule__list-item schedule__list-item--footer">
-                    12:00 — 20:00
+                  12:00 — 20:00
                   <span class="schedule__list-day">четвер</span>
                 </li>
                 <li class="schedule__list-item schedule__list-item--footer">
-                    12:00 — 20:00
+                  12:00 — 20:00
                   <span class="schedule__list-day">п’ятниця</span>
                 </li>
                 <li class="schedule__list-item schedule__list-item--footer">
-                    11:00 — 19:00
+                  11:00 — 19:00
                   <span class="schedule__list-day">субота</span>
                 </li>
                 <li class="schedule__list-item schedule__list-item--footer">
-                    11:00 — 19:00
+                  11:00 — 19:00
                   <span class="schedule__list-day">неділя</span>
                 </li>
               </ul>
               <p class="schedule__daysoff schedule__daysoff--footer">
-                Вихідні: понеділок, вівторок<br />
-                  Каса припиняє роботу за 1 годину до закриття музею
+                Вихідні: понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </div>
           </div>
 
           <div
-              class="footer__contacts"
-              id="contacts"
-            >
+            class="footer__contacts"
+            id="contacts"
+          >
             <p class="footer__contacts-title">Контакти:</p>
             <a
-                  href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D"
-                  class="footer__contacts-link"
-                >
-                  вул. М. Грушевського, 6; Київ, 01001
+              href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D"
+              class="footer__contacts-link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
             </a>
             <br />
             <a
-                  href="tel:+38 (044) 278-13-57"
-                  class="footer__contacts-link"
-                >
-                  тел. +38 (044) 278-13-57
+              href="tel:+38 (044) 278-13-57"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57
             </a>
             <br />
             <a
-                  href="tel:+38 (044) 278-74-54"
-                  class="footer__contacts-link"
-                >
-                  факс +38 (044) 278-74-54
+              href="tel:+38 (044) 278-74-54"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54
             </a>
             <br />
             <a
-                  href="mailto:info@namu.kiev.ua "
-                  class="footer__contacts-link"
-                >
-                  e-mail: info@namu.kiev.ua
+              href="mailto:info@namu.kiev.ua "
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
             </a>
             <br />
             <a
-                href="#"
-                class="icon icon--arrow-up"
-              ></a>
+              href="#"
+              class="icon icon--arrow-up"
+            ></a>
           </div>
 
           <div class="footer__menu">
@@ -472,34 +501,34 @@
               <ul class="nav__list nav__list--footer">
                 <li class="nav__item nav__item--footer">
                   <a
-                      href="#galery"
-                      class="nav__link nav__link--footer"
-                    >
-                      Галерея
+                    href="#galery"
+                    class="nav__link nav__link--footer"
+                  >
+                    Галерея
                   </a>
                 </li>
                 <li class="nav__item nav__item--footer">
                   <a
-                      href="#form"
-                      class="nav__link nav__link--footer"
-                    >
-                      Про Нас
+                    href="#form"
+                    class="nav__link nav__link--footer"
+                  >
+                    Про Нас
                   </a>
                 </li>
                 <li class="nav__item nav__item--footer nav__item--exhibitions">
                   <a
-                      href="#events"
-                      class="nav__link nav__link--footer"
-                    >
-                      Виставки та події
+                    href="#events"
+                    class="nav__link nav__link--footer"
+                  >
+                    Виставки та події
                   </a>
                 </li>
                 <li class="nav__item nav__item--footer">
                   <a
-                      href="#contacts"
-                      class="nav__link nav__link--footer"
-                    >
-                      Контакти
+                    href="#contacts"
+                    class="nav__link nav__link--footer"
+                  >
+                    Контакти
                   </a>
                 </li>
               </ul>
@@ -507,9 +536,7 @@
           </div>
 
           <div class="footer__bottom">
-            <p class="footer__designed-by">
-              Designed by Zhyriada Marina
-            </p>
+            <p class="footer__designed-by">Designed by Zhyriada Marina</p>
             <p class="footer__copyrights">
               Copyright © 2019. All Rights Reserved.
             </p>
