--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,10 @@
   <body class="page__body">
     <header class="header">
       <div class="container">
-        <div class="header__content">
+        <div
+          class="header__content"
+          id="home"
+        >
           <a
             href="#menu"
             class="header__icon icon icon--menu"
@@ -59,8 +62,9 @@
             <a
               href="#"
               class="header__logo"
+              id="header-logo"
             >
-              <div class="header__logo-text">
+              <div class="logo logo--header">
                 NA
                 <br />
                 MU
@@ -79,6 +83,15 @@
                   <div class="icon icon--arrow-white"></div>
                 </a>
               </div>
+            </div>
+            <div class="header__events-block">
+              <div class="header__events-restangle"></div>
+              <a
+                href="#events"
+                class="header__events-link"
+              >
+                події
+              </a>
             </div>
           </div>
         </div>
@@ -262,37 +275,37 @@
               <img
                 src="./images/gallery1.png"
                 alt="gallery image"
-                class="my-swiper__image"
+                class="swiper-image my-swiper__image"
               />
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide my-swiper__slide">
               <img
                 src="./images/gallery2.png"
                 alt="gallery image"
-                class="swiper-image"
+                class="swiper-image my-swiper__image"
               />
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide my-swiper__slide">
               <img
                 src="./images/gallery3.png"
                 alt="gallery image"
-                class="swiper-image"
+                class="swiper-image my-swiper__image"
               />
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide my-swiper__slide">
               <img
                 src="./images/gallery4.png"
                 alt="gallery image"
-                class="swiper-image"
+                class="swiper-image my-swiper__image"
               />
             </div>
-            <!-- <div class="swiper-slide">
-                <img
-                  src="../src/images/gallery 5.png"
-                  alt="gallery image"
-                  class="swiper-image"
-                />
-              </div> -->
+            <div class="swiper-slide my-swiper__slide my-swiper__slide--tablet">
+              <img
+                src="./images/gallery5.png"
+                alt="gallery image"
+                class="swiper-image my-swiper__image"
+              />
+            </div>
           </div>
 
           <div class="swiper-pagination"></div>
@@ -363,11 +376,13 @@
               action="#"
               method="post"
               class="subscribe__form"
+              onsubmit="this.reset(); return false;"
             >
               <input
                 type="email"
                 placeholder="Email"
                 class="subscribe__input"
+                required
               />
 
               <button
@@ -383,7 +398,137 @@
     </main>
 
     <footer class="footer page__footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__icons">
+            <a
+              href="#"
+              class="footer__logo"
+            >
+              <div class="logo logo--footer">
+                NA
+                <br />
+                MU
+              </div>
+            </a>
+            <div class="footer__icons-block">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                class="icon icon--facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="icon icon--instagram"
+              ></a>
+            </div>
+          </div>
+
+          <div
+            class="footer__schedule"
+            id="about"
+          >
+            <div class="footer__work-days">
+              <h3 class="footer__title">Графік роботи</h3>
+              <div class="footer__time">
+                <span class="footer__time--bold">12:00 — 20:00</span>
+                середа
+                <br />
+                <span class="footer__time--bold">12:00 — 20:00</span>
+                четвер
+                <br />
+                <span class="footer__time--bold">12:00 — 20:00</span>
+                п’ятниця
+                <br />
+                <span class="footer__time--bold">11:00 — 19:00</span>
+                субота
+                <br />
+                <span class="footer__time--bold">11:00 — 19:00</span>
+                неділя
+              </div>
+            </div>
+            <div class="footer__weekends">
+              <span class="footer__weekends--bold">Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину
+              <br class="footer__br footer__br--tablet" />
+              до закриття музею
+            </div>
+          </div>
+
+          <div
+            class="footer__contacts"
+            id="contacts"
+          >
+            <h3 class="footer__title">Контакти</h3>
+            <div class="footer__link-block">
+              <a
+                href="https://maps.app.goo.gl/RxwfUurGYioU9xK88"
+                class="footer__link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                href="tel:+380442781357"
+                class="footer__link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <a
+                href="tel:+380442787454"
+                class="footer__link"
+              >
+                факс +38 (044)
+                <br class="footer__br footer__br--desktop" />
+                278-74-54
+              </a>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+          <a
+            href="#home"
+            class="footer__up-arrow icon icon--arrow-up"
+          ></a>
+          <div class="footer__restangle"></div>
+
+          <nav class="footer__navigation nav nav--footer">
+            <div class="nav__block nav__block--footer">
+              <a
+                class="nav__link nav__link--footer"
+                href="#gallery"
+              >
+                Галерея
+              </a>
+              <a
+                class="nav__link nav__link--footer"
+                href="#events"
+              >
+                Виставки та події
+              </a>
+            </div>
+            <div class="nav__block nav__block--footer">
+              <a
+                class="nav__link nav__link--footer"
+                href="#about"
+              >
+                Про нас
+              </a>
+              <a
+                class="nav__link nav__link--footer"
+                href="#contacts"
+              >
+                Контакти
+              </a>
+            </div>
+          </nav>
+        </div>
+      </div>
     </footer>
     <script
       src="scripts/main.js"
