--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,12 @@
           class="header-bottom__button"
           href="tickets.html"
         >
-          <span class="header-bottom__button-icon">></span>
+          <span class="header-bottom__button-icon">
+            <img
+              src="./images/icon/icon-arrow.png"
+              alt="icon"
+            />
+          </span>
           <span class="header-bottom__button-text">КВИТКИ</span>
         </a>
       </div>
@@ -242,62 +247,64 @@
         class="gallery"
         id="gallery"
       >
-        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__container">
+          <h2 class="gallery__title">Галерея</h2>
 
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                src="images/foto1.png"
-                alt="slide1"
-              />
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="images/foto1.png"
+                  alt="slide1"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/foto2.png"
+                  alt="slide2"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/foto3.jpg"
+                  alt="slide3"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/foto4.jpg"
+                  alt="slide4"
+                />
+              </div>
             </div>
-            <div class="swiper-slide">
-              <img
-                src="images/foto2.png"
-                alt="slide2"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="images/foto3.jpg"
-                alt="slide3"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="images/foto4.jpg"
-                alt="slide4"
-              />
-            </div>
+
+            <div class="swiper-pagination"></div>
           </div>
 
-          <div class="swiper-pagination"></div>
-        </div>
+          <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-        <div class="gallery__desktop">
-          <img
-            src="images/foto1-desktop.png"
-            alt="foto1"
-            class="gallery__foto"
-          />
-          <img
-            src="images/foto2-desktop.png"
-            alt="foto2"
-            class="gallery__foto"
-          />
-          <img
-            src="images/foto3-desktop.png"
-            alt="foto3"
-            class="gallery__foto"
-          />
-          <img
-            src="images/foto4-desktop.png"
-            alt="foto4"
-            class="gallery__foto"
-          />
+          <div class="gallery__desktop">
+            <img
+              src="images/foto1-desktop.png"
+              alt="foto1"
+              class="gallery__foto"
+            />
+            <img
+              src="images/foto2-desktop.png"
+              alt="foto2"
+              class="gallery__foto"
+            />
+            <img
+              src="images/foto3-desktop.png"
+              alt="foto3"
+              class="gallery__foto"
+            />
+            <img
+              src="images/foto4-desktop.png"
+              alt="foto4"
+              class="gallery__foto"
+            />
+          </div>
         </div>
       </section>
       <!--#endregion-->
@@ -463,8 +470,10 @@
       <!--#endregion-->
     </main>
     <footer class="footer">
-      <p class="footer__text">Designed by Zhyriada Marina</p>
-      <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+      <div class="footer__container">
+        <p class="footer__text">Designed by Zhyriada Marina</p>
+        <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+      </div>
     </footer>
 
     <button class="ToTop"></button>
