--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head class="page">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -11,9 +11,184 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300..700;1,300..700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+
+        <a
+          href="#"
+          class="logo logo--header"
+        >
+          <img
+            src="images/namu-logo.svg"
+            alt="logo"
+          />
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="menu__top">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+
+          <nav class="nav menu__nav">
+            <ul class="nav__block nav__block--left">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#current-events "
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__block nav__block--right">
+              <li class="nav__item">
+                <a
+                  href="#art-museum"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#footer"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__work-shedule work-shedule">
+          <p class="work-shedule__title">Графік роботи</p>
+
+          <div class="work-shedule__content">
+            <div class="work-shedule__opened">
+              <p class="work-shedule__days-hours">
+                <span class="work-shedule__hours">12:00 — 20:00</span>
+                середа
+              </p>
+              <p class="work-shedule__days-hours">
+                <span class="work-shedule__hours">12:00 — 20:00</span>
+                четвер
+              </p>
+              <p class="work-shedule__days-hours">
+                <span class="work-shedule__hours">12:00 — 20:00</span>
+                п’ятниця
+              </p>
+              <p class="work-shedule__days-hours">
+                <span class="work-shedule__hours">11:00 — 19:00</span>
+                субота
+              </p>
+              <p class="work-shedule__days-hours">
+                <span class="work-shedule__hours">11:00 — 19:00</span>
+                неділя
+              </p>
+            </div>
+
+            <p class="work-shedule__closed">
+              <span class="work-shedule__hours">Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="art-museum"
+        id="art-museum"
+      >
+        <h1 class="art-museum__title">Художній музей</h1>
+
+        <div class="art-museum__tickets">
+          <div>КВИТКИ</div>
+
+          <div class="go-block go-block--green">
+            <a
+              href="#"
+              class="icon icon--arrow go-block__link"
+            ></a>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="current-events"
+        id="current-events"
+      >
+        <h2>Актуальні події</h2>
+      </section>
+
+      <section
+        class="from-classicism-to-romanticism"
+        id="from-classicism-to-romanticism"
+      >
+        <h3>Від класицизму до романтизму</h3>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <h2>Галерея</h2>
+      </section>
+
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <h2>Підписка</h2>
+      </section>
+    </main>
+
+    <footer
+      class="footer"
+      id="footer"
+    ></footer>
+
+    <!-- <script src="scripts/main.js"></script> -->
   </body>
 </html>
