--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,7 @@
             </div>
           </div>
         </aside>
+        <div class="overlay"></div>
       </div>
       <div class="header__bottom">
         <h2 class="header__title">
