--- a/src/index.html
+++ b/src/index.html
@@ -411,14 +411,37 @@
             <div class="connection">
               <p class="connection__title">Контакти:</p>
               <div class="connection__content">
-                <a class="connection__address">
+                <a
+                  class="connection__address"
+                  href="https://www.google.com/maps?q=вул.+М.+Грушевського,+6,+Київ"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   вул. М. Грушевського, 6;
                   <br />
                   Київ, 01001
                 </a>
-                <p class="connection__number">тел. +38 (044) 278-13-57</p>
-                <p class="connection__faks">факс +38 (044) 278-74-54</p>
-                <p class="connection__email">e-mail: info@namu.kiev.ua</p>
+                <br />
+                <a
+                  href="tel:+380442781357"
+                  class="connection__number"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <br />
+                <a
+                  href="tel:+380442787454"
+                  class="connection__faks"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <br />
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="connection__email"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
               </div>
             </div>
           </div>
